ncc/testsuite/positive/bug-1203.n
using System.Collections;
using System.Collections.Generic;
using System.Console;

[Record]
class A[T] : IEnumerable, IEnumerable[T]
{
  field : list[T];
  
  public GetEnumerator() : IEnumerator[T]
    implements IEnumerable[T].GetEnumerator
  {
    field.GetEnumerator()
  }

  public GetEnumerator1() : IEnumerator
    implements IEnumerable.GetEnumerator
  {
    ["it's a joke"].GetEnumerator()
  }
}

public interface I1 { Test() : void; }
public interface I1[T] { Test() : T; }

public class B : I1, I1[int]
{
  public Test() : void implements I1.Test { }
  public Test1() : int implements I1[int].Test { 1 }
}

module Program
{
  public Main() : void
  {
    foreach (x in A([1, 2]))
      WriteLine(x);
      
    foreach (x in A([1, 2]) : IEnumerable)
      WriteLine(x);
  }
}
/*
BEGIN-OUTPUT
1
2
it's a joke
END-OUTPUT
*/
